@@ -5,7 +5,7 @@ use Carp ();
 $ENV{TOADFARM_SILENT} = 1;
 $ENV{HOME}            = 't';
 
-plan skip_all => 'Cannot run on Win32' if $^O =~ /win/i;
+plan skip_all => 'Cannot run on Win32' if $^O eq 'MSWin32';
 plan skip_all => 'Cannot read t/.toadfarm/script.conf' unless -r 't/.toadfarm/script.conf';
 
 my (@exec, $ret);
