@@ -3,6 +3,7 @@ Revision history for perl distribution Toadfarm
 0.71 Not Released
  - Add command "status"
  - Command "start" and "stop" includes moniker in output
+ - Fix t/command-tail.t on MSWin32
 
 0.70 2015-11-27T11:51:04+0100
  - Skip command-tail.t: ualarm is not implementeed on MSWin32
